- Added properties for determining whether in edit mode or add account mode - corrected formating of IoC files - updated view to bind to new PageTitle Property

--- a/Gep13.WindowsMobile.VbfViewer.Client/Views/AddAccountView.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Views/AddAccountView.xaml
@@ -13,7 +13,7 @@
                             SupportedOrientations="Portrait"
                             Orientation="Portrait"
                             mc:Ignorable="d"
-                            d:DesignHeight="696"
+                            d:DesignHeight="728"
                             d:DesignWidth="480"
                             shell:SystemTray.IsVisible="True">
 
@@ -28,7 +28,8 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <TextBlock Text="add account"
+            <TextBlock x:Name="PageTitle"
+                       Text="add account"
                        Style="{StaticResource PhoneTextTitle1Style}"
                        Margin="0" />
 
