--- a/Gep13.WindowsMobile.VbfViewer.Client/App.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Gep13.WindowsMobile.VbfViewer.Client"
+             xmlns:local="clr-namespace:Gep13.WindowsMobile.VbfViewer.Client.Framework"
              x:Class="Gep13.WindowsMobile.VbfViewer.Client.App">
     <Application.Resources>
         <ResourceDictionary>
