--- a/Gep13.WindowsMobile.VbfViewer.Client/Views/AddAccountView.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Views/AddAccountView.xaml
@@ -1,21 +1,22 @@
-﻿<phone:PhoneApplicationPage x:Class="Gep13.WindowsMobile.VbfViewer.Client.Views.AddAccountView"
-                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                            xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-                            xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-                            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                            xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-                            xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
-                            FontFamily="{StaticResource PhoneFontFamilyNormal}"
-                            FontSize="{StaticResource PhoneFontSizeNormal}"
-                            Foreground="{StaticResource PhoneForegroundBrush}"
-                            SupportedOrientations="Portrait"
-                            Orientation="Portrait"
-                            mc:Ignorable="d"
-                            d:DesignHeight="728"
-                            d:DesignWidth="480"
-                            shell:SystemTray.IsVisible="True">
+﻿<pages:AppPageViewBase x:Class="Gep13.WindowsMobile.VbfViewer.Client.Views.AddAccountView"
+                       xmlns:pages="clr-namespace:Gep13.WindowsMobile.VbfViewer.Client.Views"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
+                       xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                       xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                       xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
+                       FontFamily="{StaticResource PhoneFontFamilyNormal}"
+                       FontSize="{StaticResource PhoneFontSizeNormal}"
+                       Foreground="{StaticResource PhoneForegroundBrush}"
+                       SupportedOrientations="Portrait"
+                       Orientation="Portrait"
+                       mc:Ignorable="d"
+                       d:DesignHeight="728"
+                       d:DesignWidth="480"
+                       shell:SystemTray.IsVisible="True">
 
     <StackPanel>
 
@@ -53,15 +54,4 @@
 
     </StackPanel>
 
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True"
-                              IsMenuEnabled="False">
-            <shell:ApplicationBar.Buttons>
-                <cal:AppBarButton IconUri="/Resources/Iconography/appbar.save.rest.png"
-                                  Text="Save"
-                                  Message="SaveAndNavigateToProfileView" />
-            </shell:ApplicationBar.Buttons>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
-
-</phone:PhoneApplicationPage>
+</pages:AppPageViewBase>
