--- a/Gep13.WindowsMobile.VbfViewer.Client/Views/ProfileView.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Views/ProfileView.xaml
@@ -1,34 +1,47 @@
-﻿<phone:PhoneApplicationPage 
-    x:Class="Gep13.WindowsMobile.VbfViewer.Client.Views.ProfileView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
-    FontFamily="{StaticResource PhoneFontFamilyNormal}"
-    FontSize="{StaticResource PhoneFontSizeNormal}"
-    Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait" Orientation="Portrait"
-    mc:Ignorable="d" d:DesignHeight="728" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True">
+﻿<pages:AppPageViewBase x:Class="Gep13.WindowsMobile.VbfViewer.Client.Views.ProfileView"
+                       xmlns:pages="clr-namespace:Gep13.WindowsMobile.VbfViewer.Client.Views"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
+                       xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                       xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
+                       FontFamily="{StaticResource PhoneFontFamilyNormal}"
+                       FontSize="{StaticResource PhoneFontSizeNormal}"
+                       Foreground="{StaticResource PhoneForegroundBrush}"
+                       SupportedOrientations="Portrait"
+                       Orientation="Portrait"
+                       mc:Ignorable="d"
+                       d:DesignHeight="728"
+                       d:DesignWidth="480"
+                       shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot"
+          Background="Transparent">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        <StackPanel x:Name="TitlePanel"
+                    Grid.Row="0"
+                    Margin="12,17,0,28">
+            <TextBlock x:Name="ApplicationTitle"
+                       Text="MY APPLICATION"
+                       Style="{StaticResource PhoneTextNormalStyle}" />
+            <TextBlock x:Name="PageTitle"
+                       Text="page name"
+                       Margin="9,-7,0,0"
+                       Style="{StaticResource PhoneTextTitle1Style}" />
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="ContentPanel"
+              Grid.Row="1"
+              Margin="12,0,12,0">
             <StackPanel>
                 <Button x:Name="ToggleProgressBar"
                         Content="Show/Hide Progress" />
@@ -36,19 +49,4 @@
         </Grid>
     </Grid>
 
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True"
-                              IsMenuEnabled="True">
-            <shell:ApplicationBar.Buttons>
-                <cal:AppBarButton IconUri="\Resources\Iconography\appbar.feature.settings.rest.png"
-                                  Text="settings"
-                                  Message="SaveAndNavigateToSettingsView" />
-            </shell:ApplicationBar.Buttons>
-            <shell:ApplicationBar.MenuItems>
-                <cal:AppBarMenuItem Text="update account"
-                                    Message="NavigateToAddAccountView" />
-            </shell:ApplicationBar.MenuItems>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
-
-</phone:PhoneApplicationPage>
+</pages:AppPageViewBase>
