--- a/Gep13.WindowsMobile.VbfViewer.Client/Views/WelcomeView.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Views/WelcomeView.xaml
@@ -1,6 +1,7 @@
-﻿<phone:PhoneApplicationPage 
+﻿<pages:AppPageViewBase
     x:Class="Gep13.WindowsMobile.VbfViewer.Client.Views.WelcomeView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                            xmlns:pages="clr-namespace:Gep13.WindowsMobile.VbfViewer.Client.Views"
+                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
@@ -46,4 +47,4 @@
         </Grid>
     </StackPanel>
 
-</phone:PhoneApplicationPage>
+</pages:AppPageViewBase>
