- Added Settings Page - Trying to get BackStack implemented correctly, still needs work

--- a/Gep13.WindowsMobile.VbfViewer.Client/Views/WelcomeView.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Views/WelcomeView.xaml
@@ -40,7 +40,7 @@
                      BorderThickness="0" 
                      Foreground="{StaticResource PhoneSubtleBrush}"/>
 
-                <Button x:Name="NavigateToAddAccountView" 
+                <Button x:Name="GoToAddAccountPage" 
                     Content="proceed" 
                     HorizontalAlignment="Right"/>
             </StackPanel>
