Added some template pages for the About Page page, including the License, Credits and History.  Updated the Style for the About Page to include the Status Bar.   Included the necessary styles to make the about pages work.

--- a/Gep13.WindowsMobile.VbfViewer.Client/Content/About/AboutStyles.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Content/About/AboutStyles.xaml
@@ -17,7 +17,7 @@
         
         <!-- Use the following setter to enable/disable the system tray on the about page -->
         <Setter Property="shell:SystemTray.IsVisible"
-                Value="False" />
+                Value="True" />
         
         <!-- You can use setters like the following to add transitions to your about page. 
              To make this work, you have to add:
