--- a/Gep13.WindowsMobile.VbfViewer.Client/Resources/StylesAndTemplates/PageHeader.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Resources/StylesAndTemplates/PageHeader.xaml
@@ -1,24 +1,31 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-	<Style x:Key="PageHeader" TargetType="ItemsControl">
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="ItemsControl">
-					<Grid HorizontalAlignment="Left" 
-						VerticalAlignment="Center"
-						Height="60"
-						Width="228" >
-						<TextBlock Text="VBForums Viewer" 
-								VerticalAlignment="Center" 
-								HorizontalAlignment="Center" 
-								FontFamily="Segoe WP Bold"/>
-					</Grid>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-		<Setter Property="FontSize" Value="24"/>
-	</Style>
+    <Style x:Key="PageHeader"
+           TargetType="ItemsControl">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ItemsControl">
+                    <Grid HorizontalAlignment="Left"
+                          VerticalAlignment="Center"
+                          Height="60"
+                          Width="212">
+                        <TextBlock Text="TEAMCITYMETRO"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   FontFamily="Segoe WP Bold" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="FontSize"
+                Value="24" />
+    </Style>
+
+    <Style x:Key="PhoneTitlePanelStyle"
+           TargetType="Panel">
+        <Setter Property="Margin"
+                Value="24,16,0,12" />
+    </Style>
 
 </ResourceDictionary> 
