--- a/Gep13.WindowsMobile.VbfViewer.Client/Resources/StylesAndTemplates/TextStyles.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Resources/StylesAndTemplates/TextStyles.xaml
@@ -1,25 +1,127 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="SubHeaderBold" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="Segoe WP Semibold"/>
-        <Setter Property="FontSize" Value="32"/>
-        <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
-    </Style>
+	<Style x:Key="SubHeaderBold"
+		   TargetType="TextBlock">
+		<Setter Property="FontFamily"
+				Value="Segoe WP Semibold" />
+		<Setter Property="FontSize"
+				Value="32" />
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneForegroundBrush}" />
+	</Style>
 
-    <Style x:Key="ClickableText" TargetType="TextBlock">
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="FontFamily" Value="Segoe WP Light"/>
-        <Setter Property="FontSize" Value="48"/>
-        <Setter Property="Margin" Value="0,0,0,10"/>
-    </Style>
+	<Style x:Key="PhoneTextTitle0Style"
+		   TargetType="TextBlock">
+		<Setter Property="FontFamily"
+				Value="{StaticResource PhoneFontFamilySemiBold}" />
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneForegroundBrush}" />
+		<Setter Property="FontSize"
+				Value="{StaticResource PhoneFontSizeMedium}" />
+	</Style>
 
-    <Style x:Key="ClickableTextbox" TargetType="TextBox">
-        <Setter Property="FontFamily" Value="Segoe WP Light"/>
-        <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
-        <Setter Property="FontSize" Value="48"/>
-        <Setter Property="Margin" Value="0,0,0,10"/>
-    </Style>
+	<Style x:Key="PhoneTextTitle1Style"
+		   TargetType="TextBlock">
+		<Setter Property="FontFamily"
+				Value="{StaticResource PhoneFontFamilySemiLight}" />
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneForegroundBrush}" />
+		<Setter Property="FontSize"
+				Value="{StaticResource PhoneFontSizeExtraExtraLarge}" />
+	</Style>
+
+	<Style x:Key="PhoneTextGroupHeaderStyle"
+		   TargetType="TextBlock">
+		<Setter Property="FontFamily"
+				Value="{StaticResource PhoneFontFamilyLight}" />
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneSubtleBrush}" />
+		<Setter Property="FontSize"
+				Value="{StaticResource PhoneFontSizeLarge}" />
+	</Style>
+
+	<Style x:Key="PhoneTextDetailStyle"
+		   TargetType="TextBlock">
+		<Setter Property="FontFamily"
+				Value="{StaticResource PhoneFontFamilyLight}" />
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneForegroundBrush}" />
+		<Setter Property="FontSize"
+				Value="{StaticResource PhoneFontSizeLarge}" />
+	</Style>
+
+	<!-- A style for text blocks that act as a label for a text box -->
+	<Style x:Key="LabelStyle"
+		   TargetType="TextBlock">
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneSubtleBrush}" />
+		<Setter Property="Margin"
+				Value="12,17,12,-5" />
+	</Style>
+
+	<Style x:Key="VersionTitleStyle"
+		   TargetType="TextBlock">
+		<Setter Property="FontFamily"
+				Value="{StaticResource PhoneFontFamilySemiBold}" />
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneAccentBrush}" />
+		<Setter Property="FontSize"
+				Value="{StaticResource PhoneFontSizeLarge}" />
+		<Setter Property="Margin"
+				Value="{StaticResource PhoneHorizontalMargin}" />
+	</Style>
+
+
+	<Style x:Key="HyperlinkButtonStyle1"
+		   TargetType="HyperlinkButton">
+		<Setter Property="Foreground"
+				Value="{StaticResource PhoneForegroundBrush}" />
+		<Setter Property="Background"
+				Value="Transparent" />
+		<Setter Property="FontSize"
+				Value="{StaticResource PhoneFontSizeMedium}" />
+		<Setter Property="Padding"
+				Value="0" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="HyperlinkButton">
+					<Border Background="Transparent">
+						<VisualStateManager.VisualStateGroups>
+							<VisualStateGroup x:Name="CommonStates">
+								<VisualState x:Name="Normal" />
+								<VisualState x:Name="MouseOver" />
+								<VisualState x:Name="Pressed">
+									<Storyboard>
+										<DoubleAnimation Duration="0"
+														 To="0.5"
+														 Storyboard.TargetProperty="Opacity"
+														 Storyboard.TargetName="TextElement" />
+									</Storyboard>
+								</VisualState>
+								<VisualState x:Name="Disabled">
+									<Storyboard>
+										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
+																	   Storyboard.TargetName="TextElement">
+											<DiscreteObjectKeyFrame KeyTime="0"
+																	Value="{StaticResource PhoneDisabledBrush}" />
+										</ObjectAnimationUsingKeyFrames>
+									</Storyboard>
+								</VisualState>
+							</VisualStateGroup>
+						</VisualStateManager.VisualStateGroups>
+						<Border Background="{TemplateBinding Background}"
+								Margin="{StaticResource PhoneHorizontalMargin}"
+								Padding="{TemplateBinding Padding}">
+							<!--<TextBlock x:Name="TextElement" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Text="{TemplateBinding Content}" TextDecorations="Underline" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>-->
+							<ContentPresenter x:Name="TextElement"
+											  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+											  VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+						</Border>
+					</Border>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
 
 </ResourceDictionary>
