--- a/Gep13.WindowsMobile.VbfViewer.Client/Views/WelcomeView.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Views/WelcomeView.xaml
@@ -1,48 +1,54 @@
-﻿<pages:AppPageViewBase
-    x:Class="Gep13.WindowsMobile.VbfViewer.Client.Views.WelcomeView"
-                            xmlns:pages="clr-namespace:Gep13.WindowsMobile.VbfViewer.Client.Views"
-                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    FontFamily="{StaticResource PhoneFontFamilyNormal}"
-    FontSize="{StaticResource PhoneFontSizeNormal}"
-    Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait" Orientation="Portrait"
-    mc:Ignorable="d" d:DesignHeight="800" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True">
+﻿<pages:AppPageViewBase x:Class="Gep13.WindowsMobile.VbfViewer.Client.Views.WelcomeView"
+                       xmlns:pages="clr-namespace:Gep13.WindowsMobile.VbfViewer.Client.Views"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                       FontFamily="{StaticResource PhoneFontFamilyNormal}"
+                       FontSize="{StaticResource PhoneFontSizeNormal}"
+                       Foreground="{StaticResource PhoneForegroundBrush}"
+                       SupportedOrientations="Portrait"
+                       Orientation="Portrait"
+                       mc:Ignorable="d"
+                       d:DesignHeight="800"
+                       d:DesignWidth="480"
+                       shell:SystemTray.IsVisible="True">
 
     <StackPanel>
-        <ItemsControl Style="{StaticResource PageHeader}"/>
+        <ItemsControl Style="{StaticResource PageHeader}" />
 
-        <Grid Margin="20,0" Height="616">
+        <Grid Margin="20,0"
+              Height="616">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <TextBlock Text="welcome" Style="{StaticResource PhoneTextTitle1Style}" Margin="0"/>
+            <TextBlock Text="welcome"
+                       Style="{StaticResource PhoneTextTitle1Style}"
+                       Margin="0" />
 
-            <StackPanel Grid.Row="1" VerticalAlignment="Top" Margin="0,30,0,0">
-                <TextBox Template="{StaticResource TextboxClicker}" 
-                     Text="The VBForums Viewer allows you to access your VBForums profile on your Windows Phone handset.  You will need to provide your username and password for the site.&#xa;&#xa;If you know what your username and password is tap the proceed button to get started." 
-                     AcceptsReturn="True" 
-                     TextWrapping="Wrap" 
-                     FontSize="21.333" 
-                     IsEnabled="False"
-                     Background="{StaticResource PhoneBackgroundBrush}" 
-                     SelectionBackground="{x:Null}" 
-                     BorderBrush="{x:Null}" 
-                     FontFamily="Segoe WP" 
-                     SelectionForeground="{x:Null}" 
-                     BorderThickness="0" 
-                     Foreground="{StaticResource PhoneSubtleBrush}"/>
+            <StackPanel Grid.Row="1"
+                        VerticalAlignment="Top"
+                        Margin="0,30,0,0">
+                <TextBox Template="{StaticResource TextboxClicker}"
+                         Text="The VBForums Viewer allows you to access your VBForums profile on your Windows Phone handset.  You will need to provide your username and password for the site.&#xa;&#xa;If you know what your username and password is tap the proceed button to get started."
+                         AcceptsReturn="True"
+                         TextWrapping="Wrap"
+                         FontSize="21.333"
+                         IsEnabled="False"
+                         Background="{StaticResource PhoneBackgroundBrush}"
+                         SelectionBackground="{x:Null}"
+                         BorderBrush="{x:Null}"
+                         FontFamily="Segoe WP"
+                         SelectionForeground="{x:Null}"
+                         BorderThickness="0"
+                         Foreground="{StaticResource PhoneSubtleBrush}" />
 
-                <Button x:Name="GoToAddAccountPage" 
-                    Content="proceed" 
-                    HorizontalAlignment="Right"/>
+                <Button x:Name="GoToAddAccountPage"
+                        Content="proceed"
+                        HorizontalAlignment="Right" />
             </StackPanel>
         </Grid>
     </StackPanel>
