Corrected the name of the application within the HelpView and PageHeader files.

--- a/Gep13.WindowsMobile.VbfViewer.Client/Resources/StylesAndTemplates/PageHeader.xaml
+++ b/Gep13.WindowsMobile.VbfViewer.Client/Resources/StylesAndTemplates/PageHeader.xaml
@@ -10,7 +10,7 @@
                           VerticalAlignment="Center"
                           Height="60"
                           Width="212">
-                        <TextBlock Text="TEAMCITYMETRO"
+                        <TextBlock Text="VBFORUMSMETRO"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center"
                                    FontFamily="Segoe WP Bold" />
