--- a/Gep13.WindowsPhone.VBForumsMetro.Client/Views/AddAccountView.xaml
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/Views/AddAccountView.xaml
@@ -15,40 +15,65 @@
                        d:DesignWidth="480"
                        shell:SystemTray.IsVisible="True">
 
-    <StackPanel>
+    <Grid x:Name="LayoutRoot"
+          Background="Transparent">
+        <Rectangle Fill="{StaticResource PhoneAccentBrush}"
+                   Width="300"
+                   Height="364"
+                   VerticalAlignment="Bottom"
+                   HorizontalAlignment="Right"
+                   Margin="{StaticResource PhoneMargin}"
+                   Opacity=".25">
+            <Rectangle.OpacityMask>
+                <ImageBrush ImageSource="/Resources/Images/lock.png" />
+            </Rectangle.OpacityMask>
+        </Rectangle>
 
-        <ItemsControl Style="{StaticResource PageHeader}" />
+        <ScrollViewer>
+            <Grid Height="690">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-        <Grid Margin="20,0"
-              Height="616">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+                <!-- Grid Row 0 Column 0 -->
+                <!-- The standard header -->
+                <StackPanel x:Name="TitlePanel"
+                            Grid.Row="0"
+                            Style="{StaticResource PhoneTitlePanelStyle}">
+                    <TextBlock x:Name="ApplicationTitle"
+                               Text="VBFORUMSMETRO"
+                               Style="{StaticResource PhoneTextTitle0Style}" />
+                    <TextBlock x:Name="PageTitle"
+                               Text="add account"
+                               Style="{StaticResource PhoneTextTitle1Style}"
+                               Margin="0" />
+                </StackPanel>
 
-            <TextBlock x:Name="PageTitle"
-                       Text="add account"
-                       Style="{StaticResource PhoneTextTitle1Style}"
-                       Margin="0" />
+                <!-- Grid Row 1 Column 0 -->
+                <StackPanel Grid.Row="1"
+                            VerticalAlignment="Top"
+                            Margin="24,16,12,0">
 
-            <StackPanel Grid.Row="1"
-                        VerticalAlignment="Top"
-                        Margin="0,30,0,0">
+                    <TextBlock Text="username"
+                               Style="{StaticResource LabelStyle}"
+                               Margin="0" />
+                    <TextBox x:Name="Username"
+                             Margin="-10,-5,-10,8"
+                             InputScope="EmailUserName" />
 
-                <TextBlock Text="username"
-                           Style="{StaticResource SubHeaderBold}" />
-                <TextBox x:Name="Username"
-                         Margin="-10,-5,-10,8"
-                         InputScope="EmailUserName" />
+                    <TextBlock Text="password"
+                               Style="{StaticResource LabelStyle}"
+                               Margin="0" />
+                    <PasswordBox x:Name="Password"
+                                 Margin="-10,-5,-10,8" />
 
-                <TextBlock Text="password"
-                           Style="{StaticResource SubHeaderBold}" />
-                <PasswordBox x:Name="Password"
-                             Margin="-10,-5,-10,8" />
+                    <TextBlock x:Name="StatusLabel"
+                               HorizontalAlignment="Center" />
 
-            </StackPanel>
-        </Grid>
-
-    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </ScrollViewer>
+    </Grid>
 
 </pages:AppPageViewBase>
