Moved the Visibility Converters into the core library, and updated references to them. Corrected some StyleCop errors as well

--- a/Gep13.WindowsPhone.VBForumsMetro.Client/App.xaml
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/App.xaml
@@ -8,6 +8,7 @@
                 <ResourceDictionary Source="\Resources\StylesAndTemplates\PageHeader.xaml"/>
                 <ResourceDictionary Source="\Resources\StylesAndTemplates\TextStyles.xaml"/>
                 <ResourceDictionary Source="\Resources\StylesAndTemplates\TextboxClicker.xaml"/>
+                <ResourceDictionary Source="\Resources\Converters.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <local:AppBootstrapper x:Key="bootstrapper" />
