--- a/Gep13.WindowsPhone.VBForumsMetro.Client/Views/ProfileView.xaml
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/Views/ProfileView.xaml
@@ -1,40 +1,19 @@
-﻿<pages:AppPageViewBase x:Class="Gep13.WindowsPhone.VBForumsMetro.Client.Views.ProfileView"
-                       xmlns:pages="clr-namespace:Gep13.WindowsPhone.Core.Views;assembly=Gep13.WindowsPhone.Core"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       FontFamily="{StaticResource PhoneFontFamilyNormal}"
-                       FontSize="{StaticResource PhoneFontSizeNormal}"
-                       Foreground="{StaticResource PhoneForegroundBrush}"
-                       SupportedOrientations="Portrait"
-                       Orientation="Portrait"
-                       mc:Ignorable="d"
-                       d:DesignHeight="728"
-                       d:DesignWidth="480"
-                       shell:SystemTray.IsVisible="True">
+﻿<pages:AppControlViewBase 
+    x:Class="Gep13.WindowsPhone.VBForumsMetro.Client.Views.ProfileView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:pages="clr-namespace:Gep13.WindowsPhone.Core.Views;assembly=Gep13.WindowsPhone.Core" mc:Ignorable="d"
+    FontFamily="{StaticResource PhoneFontFamilyNormal}"
+    FontSize="{StaticResource PhoneFontSizeNormal}"
+    Foreground="{StaticResource PhoneForegroundBrush}"
+    d:DesignHeight="480" d:DesignWidth="480">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot"
-          Background="Transparent">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel"
-                    Grid.Row="0"
-                    Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle"
-                       Text="MY APPLICATION"
-                       Style="{StaticResource PhoneTextNormalStyle}" />
-            <TextBlock x:Name="PageTitle"
-                       Text="page name"
-                       Margin="9,-7,0,0"
-                       Style="{StaticResource PhoneTextTitle1Style}" />
+    <Grid x:Name="LayoutRoot">
+        <StackPanel>
+            <TextBlock Text="I'm the first pivot item!" />
+            <TextBlock x:Name="CurrentDateTimeText" />
         </StackPanel>
     </Grid>
-
-</pages:AppPageViewBase>
+</pages:AppControlViewBase>
