Added the ImageCacheConverter to the main Converters.xaml file

--- a/Gep13.WindowsPhone.VBForumsMetro.Client/Resources/Converters.xaml
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/Resources/Converters.xaml
@@ -5,5 +5,6 @@
 
     <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityInvertedConverter"  InvertValue="true" />
+    <converters:ImageCacheConverter x:Key="ImageCacheConverter" />
 
 </ResourceDictionary>
