Corrected the wrapping on the status label

--- a/Gep13.WindowsPhone.VBForumsMetro.Client/Views/AddAccountView.xaml
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/Views/AddAccountView.xaml
@@ -101,7 +101,8 @@
                               x:Name="ShowCheck" />
 
                     <TextBlock x:Name="StatusLabel"
-                               HorizontalAlignment="Center" />
+                               HorizontalAlignment="Center"
+                               TextWrapping="Wrap" />
 
                 </StackPanel>
             </Grid>
